resolved errors related to API key

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>C Programming Assistant - AI-Powered C Tutor</title>
+    <title>C4U - AI-Powered C assistant</title>
     <meta name="description" content="Learn C programming with an AI-powered assistant. Get instant help with syntax, debugging, and programming concepts." />
     <style>
       .inline-code {
